<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/view_background">

        <TextView
            style="@style/TextViewStyleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details" />

        <com.borjabravo.readmoretextview.ReadMoreTextView
            android:id="@+id/detailsDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_spacing_4x"
            android:layout_marginEnd="@dimen/item_spacing_4x"
            android:layout_marginTop="@dimen/item_spacing_2x"
            android:text="@string/details"
            app:trimLength="30"
            app:colorClickableText="@color/colorPink"/>

        <TextView
            style="@style/TextViewStyleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updates" />

        <com.borjabravo.readmoretextview.ReadMoreTextView
            android:id="@+id/updatesDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_spacing_4x"
            android:layout_marginEnd="@dimen/item_spacing_4x"
            android:layout_marginTop="@dimen/item_spacing_2x"
            android:text="@string/updates"
            app:trimLength="30"
            app:colorClickableText="@color/colorPink"/>

        <TextView
            style="@style/TextViewStyleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location" />

        <!--                <fragment-->
        <!--                    android:id="@+id/frLocationDetails"-->
        <!--                    android:layout_width="match_parent"-->
        <!--                    android:layout_height="120dp"-->
        <!--                    android:layout_marginStart="@dimen/item_spacing_4x"-->
        <!--                    android:layout_marginEnd="@dimen/item_spacing_4x"-->
        <!--                    android:layout_marginTop="@dimen/item_spacing_2x"-->
        <!--                    class="com.google.android.gms.maps.SupportMapFragment"-->
        <!--                    map:cameraBearing="112.5"-->
        <!--                    map:cameraTargetLat="-33.796923"-->
        <!--                    map:cameraTargetLng="150.922433"-->
        <!--                    map:cameraTilt="30"-->
        <!--                    map:cameraZoom="13"-->
        <!--                    map:mapType="normal"-->
        <!--                    map:uiCompass="false"-->
        <!--                    map:uiRotateGestures="true"-->
        <!--                    map:uiScrollGestures="false"-->
        <!--                    map:uiTiltGestures="true"-->
        <!--                    map:uiZoomControls="false"-->
        <!--                    map:uiZoomGestures="true"/>-->

        <TextView
            style="@style/TextViewStyleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/performers" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/performersDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_spacing_4x"
            android:layout_marginEnd="@dimen/item_spacing_4x"
            android:layout_marginTop="@dimen/item_spacing_2x"/>

        <TextView
            style="@style/TextViewStyleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/organizers" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/organizersDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_spacing_4x"
            android:layout_marginEnd="@dimen/item_spacing_4x"
            android:layout_marginTop="@dimen/item_spacing_2x"/>

</LinearLayout>